Fix: Creacion de tablas desde archivo properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
-
+server.port = 9090
 #-------------------------Configuración de conexión a MySQL--------------------------------------#
 
 
@@ -27,3 +27,6 @@ loggin.level.org.hibernate.SQL=DEBUG
 
 #Hacer que se muestren los valores que se inyecten a la sentencia
 loggin.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+#Actualiza la base de datos
+spring.jpa.hibernate.ddl-auto=update
